--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,20 +12,19 @@ repos:
   rev: 5.12.0
   hooks:
     - id: isort
-      exclude: migrations
+      name: isort
       args: [--profile, black, --line-length=79]
+
 
 - repo: https://github.com/pycqa/flake8
   rev: 4.0.1
   hooks:
     - id: flake8
-      exclude: (migrations|config/settings/)
-      additional_dependencies:
-        - flake8-docstrings
+      args: [--max-line-length=79]
+
 
 - repo: https://github.com/ambv/black
-  rev: 22.3.0
+  rev: 23.3.0
   hooks:
     - id: black
-      exclude: (migrations|config/settings/)
-      args: [--line-length=79]
+      args: [ --line-length=79]
