--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pre-commit = "^3.1.1"
+flake8 = "^6.0.0"
+python-telegram-bot = {extras = ["ext"], version = "^20.3"}
 
 
 [build-system]
