--- a/expert_system/pyproject.toml
+++ b/expert_system/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "expert_system"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 pre-commit = "^3.1.1"
+django = "^4.2.2"
 
 
 [build-system]
