--- a/expert_system/pyproject.toml
+++ b/expert_system/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "expert_system"}]
 python = "^3.11"
 pre-commit = "^3.1.1"
 django = "^4.2.2"
+psycopg2-binary = "^2.9.6"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
