--- a/expert_system/.pre-commit-config.yaml
+++ b/expert_system/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
   rev: 4.0.1
   hooks:
     - id: flake8
-      exclude: (migrations|config/settings)
+      exclude: (migrations|config/settings/)
 
 
 - repo: https://github.com/ambv/black
