--- a/expert_system/pyproject.toml
+++ b/expert_system/pyproject.toml
@@ -14,6 +14,9 @@ psycopg2-binary = "^2.9.6"
 python-dotenv = "^1.0.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.3.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
