--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pre-commit = "^3.1.1"
 flake8 = "^6.0.0"
 python-telegram-bot = {extras = ["ext"], version = "^20.3"}
+python-dotenv = "^1.0.0"
 
 
 [build-system]
