--- a/expert_system/env.example
+++ b/expert_system/env.example
@@ -1,6 +1,7 @@
 POSTGRES_DB=wb_db
-POSTGRES_USER=admin_wb_db
-POSTGRES_PASSWORD="postgres"
+POSTGRES_USER=your_user
+POSTGRES_PASSWORD=your_password
 DB_HOST=localhost
 DB_PORT=5432
-DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWOR}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
+DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
+SECRET_KEY=your_secret_key
