--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -13,6 +13,7 @@ python-telegram-bot = {extras = ["ext"], version = "^20.3"}
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
 aiohttp = "^3.8.4"
+asyncio = "^3.4.3"
 
 
 [build-system]
