made API, add env.example to bot

--- a/expert_system/env.example
+++ b/expert_system/env.example
@@ -4,3 +4,4 @@ POSTGRES_PASSWORD="postgres"
 DB_HOST=localhost
 DB_PORT=5432
 DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWOR}@${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
+SECRET_KEY='Нужно заполнить'
