--- a/expert_system/pyproject.toml
+++ b/expert_system/pyproject.toml
@@ -12,6 +12,7 @@ pre-commit = "^3.1.1"
 django = "^4.2.2"
 psycopg2-binary = "^2.9.6"
 python-dotenv = "^1.0.0"
+djangorestframework = "^3.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
