--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 aiohttp = "^3.8.4"
 asyncio = "^3.4.3"
 selenium = "^4.10.0"
+chromedriver-py = "^114.0.5735.90"
 
 
 [build-system]
