--- a/bot/env.example
+++ b/bot/env.example
@@ -1,3 +1,3 @@
-TELEGRAM_TOKEN="..."
-CHAT_ID = "@dbfsfg"
-URL = "https://api.telegram.org/bot6094915944:AAEfqdam7pOhgtkO4wEpJKu2UfPvHJ7-tK4/getChatMember"
+TELEGRAM_TOKEN='...'
+CHAT_ID = '@dbfsfg'
+URL = 'https://api.telegram.org/bot6094915944:AAEfqdam7pOhgtkO4wEpJKu2UfPvHJ7-tK4/getChatMember'
