--- a/expert_system/pyproject.toml
+++ b/expert_system/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.9.6"
 python-dotenv = "^1.0.0"
 django-tinymce = "^3.6.1"
 djangorestframework = "^3.14.0"
+isort = "^5.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
